data/all_generated_tests/raw_wast_tests/br_InvalidorInconsistentControlFlowGraph_812.wast
;; 3. **Test Description**: Create a loop with an invalid `br` targeting `label 0` (self-loop) and test the unwinding of the operand stack.    - **Constraint**: This tests the correct backward branch handling and ensures a proper stack unwinding consistent with the loop’s entry.

(assert_invalid
  (module
    (func (loop $L
      (i32.const 0)
      (br 0)
    ))
  )
  "type mismatch"
)